# WEPBOX

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  主页.html  节点页.html  订阅页.html  设置页.html
docs/: README.en.md
frontend/: index.html
frontend/scripts/: app.js  common.js  core.js  dashboard.js  ipcheck.js  nodes.js  settings.js  state.js  subscriptions.js  tauri-api.js
frontend/styles/: app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: clash_api.rs  config.rs  ip_check.rs  main.rs  models.rs  node_automation.rs  singbox.rs  subscriptions.rs  system.rs
